--- a/example2.html
+++ b/example2.html
@@ -13,7 +13,8 @@
       width: 800px;
       height: 800px;
       
-      /* 늘 같이 다니는 4줄 */
+      /* 늘 같이 다니는 4줄 
+         아이템을 가운데에 배치하기 위해 */
       display: flex; 
       flex-direction: column;
       justify-content: center;
